// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hero Renders the UI snapshot correctly 1`] = `
<div
  className="css-0"
  data-responsive-background-image={true}
  data-testid="hero"
  style={
    {
      "backgroundImage": "/**/url("//placekitten.com/1600/800")",
      "bgColor": "ui.bg.default",
    }
  }
>
  <div
    className="css-puf0z6"
    data-testid="hero-content"
    style={
      {
        "defaultBackgroundColor": "ui.bg.default",
      }
    }
  >
    <h1
      className="chakra-heading css-1xdhyk6"
      id="primary-hero"
    >
      Hero Primary
    </h1>
    <div
      className="css-0"
    >
      Example Subtitle
    </div>
  </div>
</div>
`;

exports[`Hero Renders the UI snapshot correctly 2`] = `
<div
  className="css-0"
  data-responsive-background-image={true}
  data-testid="hero"
>
  <div
    className="css-0"
    data-testid="hero-content"
    style={{}}
  >
    <div
      className="css-0"
      style={
        {
          "backgroundImage": undefined,
        }
      }
    >
      <div
        className="css-0"
      >
        <img
          alt="Image example"
          className="css-0"
          src="//placekitten.com/800/400"
        />
      </div>
    </div>
    <h1
      className="chakra-heading css-1xdhyk6"
      id="secondary-hero"
    >
      Hero Secondary
    </h1>
    <div
      className="css-0"
    >
      Explore our collection of hundreds of online resources and databases. Use our free online content to help with your research, whether it's finding a single article, tracing a family tree, learning a new language, or anything in between.
    </div>
  </div>
</div>
`;

exports[`Hero Renders the UI snapshot correctly 3`] = `
<div
  className="css-0"
  data-responsive-background-image={true}
  data-testid="hero"
>
  <div
    className="css-0"
    data-testid="hero-content"
    style={{}}
  >
    <div
      className="css-0"
      style={
        {
          "backgroundImage": undefined,
        }
      }
    >
      <div
        className="css-0"
      >
        <img
          alt="Image example"
          className="css-0"
          src="//placekitten.com/800/400"
        />
      </div>
    </div>
    <h1
      className="chakra-heading css-1xdhyk6"
      id="secondary-hero"
    >
      Hero Secondary Books and More
    </h1>
    <div
      className="css-0"
    >
      Explore our collection of hundreds of online resources and databases. Use our free online content to help with your research, whether it's finding a single article, tracing a family tree, learning a new language, or anything in between.
    </div>
  </div>
</div>
`;

exports[`Hero Renders the UI snapshot correctly 4`] = `
<div
  className="css-0"
  data-responsive-background-image={true}
  data-testid="hero"
>
  <div
    className="css-0"
    data-testid="hero-content"
    style={{}}
  >
    <div
      className="css-0"
      style={
        {
          "backgroundImage": undefined,
        }
      }
    >
      <div
        className="css-0"
      >
        <img
          alt="Image example"
          className="css-0"
          src="//placekitten.com/800/400"
        />
      </div>
    </div>
    <h1
      className="chakra-heading css-1xdhyk6"
      id="secondary-hero"
    >
      Hero Secondary Locations
    </h1>
    <div
      className="css-0"
    >
      Explore our collection of hundreds of online resources and databases. Use our free online content to help with your research, whether it's finding a single article, tracing a family tree, learning a new language, or anything in between.
    </div>
  </div>
</div>
`;

exports[`Hero Renders the UI snapshot correctly 5`] = `
<div
  className="css-0"
  data-responsive-background-image={true}
  data-testid="hero"
>
  <div
    className="css-0"
    data-testid="hero-content"
    style={{}}
  >
    <div
      className="css-0"
      style={
        {
          "backgroundImage": undefined,
        }
      }
    >
      <div
        className="css-0"
      >
        <img
          alt="Image example"
          className="css-0"
          src="//placekitten.com/800/400"
        />
      </div>
    </div>
    <h1
      className="chakra-heading css-1xdhyk6"
      id="secondary-hero"
    >
      Hero Secondary
    </h1>
    <div
      className="css-0"
    >
      Explore our collection of hundreds of online resources and databases. Use our free online content to help with your research, whether it's finding a single article, tracing a family tree, learning a new language, or anything in between.
    </div>
  </div>
</div>
`;

exports[`Hero Renders the UI snapshot correctly 6`] = `
<div
  className="css-0"
  data-responsive-background-image={true}
  data-testid="hero"
>
  <div
    className="css-0"
    data-testid="hero-content"
    style={{}}
  >
    <div
      className="css-0"
      style={
        {
          "backgroundImage": undefined,
        }
      }
    >
      <div
        className="css-0"
      >
        <img
          alt="Image example"
          className="css-0"
          src="//placekitten.com/800/400"
        />
      </div>
    </div>
    <h1
      className="chakra-heading css-1xdhyk6"
      id="secondary-hero"
    >
      Hero Secondary What's On
    </h1>
    <div
      className="css-0"
    >
      Explore our collection of hundreds of online resources and databases. Use our free online content to help with your research, whether it's finding a single article, tracing a family tree, learning a new language, or anything in between.
    </div>
  </div>
</div>
`;

exports[`Hero Renders the UI snapshot correctly 7`] = `
<div
  className="css-0"
  data-responsive-background-image={true}
  data-testid="hero"
>
  <div
    className="css-x9wpmn"
    data-testid="hero-content"
    style={
      {
        "defaultBackgroundColor": "ui.gray.x-dark",
      }
    }
  >
    <h1
      className="chakra-heading css-1xdhyk6"
      id="tertiary-hero"
    >
      Hero Tertiary
    </h1>
    <p>
      With 92 locations across the Bronx, Manhattan, and Staten Island, The New York Public Library is an essential part of neighborhoods across the city. Visit us today.
    </p>
  </div>
</div>
`;

exports[`Hero Renders the UI snapshot correctly 8`] = `
<div
  className="css-0"
  data-responsive-background-image={true}
  data-testid="hero"
  style={
    {
      "_after": {
        "backgroundBlendMode": null,
        "backgroundImage": "/**/url("//placekitten.com/g/2400/800")",
        "backgroundPosition": "center",
        "backgroundSize": "cover",
        "content": """",
        "height": {
          "base": "100%",
          "md": "calc(100% - var(--nypl-space-xl))",
        },
        "minHeight": "300px",
        "opacity": "1.0",
        "paddingBottom": {
          "base": "0",
          "md": "xl",
        },
        "position": "absolute",
        "top": 0,
        "width": "100%",
      },
      "_before": {
        "bgColor": "ui.black",
        "content": """",
        "height": {
          "base": "100%",
          "md": "calc(100% - var(--nypl-space-xl))",
        },
        "minHeight": "300px",
        "paddingBottom": {
          "base": "0",
          "md": "xl",
        },
        "position": "absolute",
        "top": 0,
        "width": "100%",
      },
    }
  }
>
  <div
    className="css-r7tfns"
    data-testid="hero-content"
    style={
      {
        "defaultBackgroundColor": "dark.ui.bg.default",
      }
    }
  >
    <div
      className="css-0"
      style={
        {
          "backgroundImage": "/**/url("//placekitten.com/800/400")",
        }
      }
    >
      <div
        className="css-0"
      >
        <img
          alt="Image example"
          className="css-0"
          src="//placekitten.com/800/400"
        />
      </div>
    </div>
    <div
      className="css-0"
    >
      <h1
        className="chakra-heading css-1xdhyk6"
        id="campaign-hero"
      >
        Hero Campaign
      </h1>
      With 92 locations across the Bronx, Manhattan, and Staten Island, The New York Public Library is an essential part of neighborhoods across the city. Visit us today.
    </div>
  </div>
</div>
`;

exports[`Hero Renders the UI snapshot correctly 9`] = `
<div
  className="css-0"
  data-responsive-background-image={true}
  data-testid="hero"
>
  <div
    className="css-puf0z6"
    data-testid="hero-content"
    style={
      {
        "defaultBackgroundColor": "ui.bg.default",
      }
    }
  >
    <div
      className="css-0"
      style={
        {
          "backgroundImage": "/**/url("//placekitten.com/800/400")",
        }
      }
    >
      <div
        className="css-0"
      >
        <img
          alt="Image example"
          className="css-0"
          src="//placekitten.com/800/400"
        />
      </div>
    </div>
    <div
      className="css-0"
    >
      With 92 locations across the Bronx, Manhattan, and Staten Island, The New York Public Library is an essential part of neighborhoods across the city. Visit us today.
    </div>
  </div>
</div>
`;

exports[`Hero Renders the UI snapshot correctly 10`] = `
<div
  className="css-0"
  data-responsive-background-image={true}
  data-testid="hero"
  style={
    {
      "backgroundImage": "/**/url("//placekitten.com/1600/800")",
      "bgColor": "ui.bg.default",
    }
  }
>
  <div
    className="css-puf0z6"
    data-testid="hero-content"
    style={
      {
        "defaultBackgroundColor": "ui.bg.default",
      }
    }
  >
    <h1
      className="chakra-heading css-1xdhyk6"
      id="chakra"
    >
      Hero Primary
    </h1>
    <div
      className="css-0"
    >
      Example Subtitle
    </div>
  </div>
</div>
`;

exports[`Hero Renders the UI snapshot correctly 11`] = `
<div
  className="css-0"
  data-responsive-background-image={true}
  data-testid="hero"
  style={
    {
      "backgroundImage": "/**/url("//placekitten.com/1600/800")",
      "bgColor": "ui.bg.default",
    }
  }
>
  <div
    className="css-puf0z6"
    data-testid="hero-content"
    style={
      {
        "defaultBackgroundColor": "ui.bg.default",
      }
    }
  >
    <h1
      className="chakra-heading css-1xdhyk6"
      id="props"
    >
      Hero Primary
    </h1>
    <div
      className="css-0"
    >
      Example Subtitle
    </div>
  </div>
</div>
`;
